<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">


    <TextView
        android:id="@+id/variety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/variety"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <RadioGroup
        android:id="@+id/third_choice_variety"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/variety">

        <RadioButton
            android:id="@+id/third_amnesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/amnesia" />

        <RadioButton
            android:id="@+id/third_black_widow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_widow" />

        <RadioButton
            android:id="@+id/third_skunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skunk" />

        <RadioButton
            android:id="@+id/third_pablo_escobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pablo_escobar" />

        <RadioButton
            android:id="@+id/third_montreal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/montreal" />


    </RadioGroup>


    <TextView
        android:id="@+id/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_choice_variety"

        />

    <RadioGroup
        android:id="@+id/third_how_many"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weight">

        <RadioButton
            android:id="@+id/third_weight_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/third_weight_one"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/third_weight_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_weight_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <RadioButton
            android:id="@+id/third_weight_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_weight_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </RadioGroup>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/third_switch_gift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/gift_warp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_how_many" />


    <Button
        android:id="@+id/third_fragment_cancel"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/third_fragment_Next"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_switch_gift" />

    <Button
        android:id="@+id/third_fragment_Next"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:background="#00BCD4"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/third_fragment_cancel"
        app:layout_constraintTop_toBottomOf="@+id/third_switch_gift" />


</androidx.constraintlayout.widget.ConstraintLayout>